# RadioApp

./: .gitignore  README.md
RadMag/: CMakeLists.txt  files.qrc  main.cpp  translations.qrc
RadMag/datasource/: datasource.cpp  datasource.h
RadMag/gui/: comparemodels.cpp  comparemodels.h  controlsguibottom.cpp  controlsguibottom.h  controlsguiheader.cpp  controlsguiheader.h  mainwindow.cpp  mainwindow.h
RadMag/gui/custom/: radioappbutton.cpp  radioappbutton.h
RadMag/logic/: comparemodels.cpp  comparemodels.h  favouritesjson.cpp  favouritesjson.h  radioplayer.cpp  radioplayer.h
RadMag/models/: favouritesdelegate.cpp  favouritesdelegate.h  favouritesmodel.cpp  favouritesmodel.h  radiostationdelegate.cpp  radiostationdelegate.h  radiostationsmodel.cpp  radiostationsmodel.h  requestdelegate.cpp  requestdelegate.h  requestsmodel.cpp  requestsmodel.h
RadMag/network/: networkdatamanager.cpp  networkdatamanager.h  networkdelegate.cpp  networkdelegate.h
RadMag/notifications/: popupnotifications.cpp  popupnotifications.h
RadMag/requests/: radiostation.cpp  radiostation.h  requestsdata.cpp  requestsdata.h
RadMag/share/: radmag.desktop
RadMag/translates/: german.qm  german.ts  spanish.qm  spanish.ts
